--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
+include 'kodilla-patterns'
 
