--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,5 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'kodilla-testing2'
+
